fix body overflow

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,13 @@ body {
   height: 100vh; 
 }
 
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .app-background{
   background-image: url('./imgs/background.jpg'); 
   background-size: cover; 
